--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "io.ktor:ktor-jackson:$ktor_version"
 
+    // Kodain
+    implementation "org.kodein.di:kodein-di:$kodein_version"
+
     // Arrow Kt
     implementation platform("io.arrow-kt:arrow-stack:$arrow_version")
 
