--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ arrow_version=0.13.1
 ktor_version=1.5.1
 kotlin.code.style=official
 kotlin_version=1.4.21
+kodein_version=7.5.0
 logback_version=1.2.1
 hikari_version=4.0.3
 exposed_version=0.17.13
