--- a/src/main/resources/hikari.dev.properties
+++ b/src/main/resources/hikari.dev.properties
@@ -1,6 +1,6 @@
 dataSourceClassName=com.mysql.cj.jdbc.MysqlDataSource
 dataSource.user=root
 dataSource.password=123456
-dataSource.databaseName=pokedex
+dataSource.databaseName=invoices
 dataSource.portNumber=3311
 dataSource.serverName=localhost
