--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,8 @@ kodein_version=7.5.0
 logback_version=1.2.1
 hikari_version=4.0.3
 exposed_version=0.17.13
+exposed_time_version=0.30.2
 mysql_version=8.0.23
 jsr310_version=2.12.3
+testcontainers_version=1.15.3
+jupiter_version=5.7.1
