--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,10 @@ ktor {
         modules = [ com.gsuaki.invoices.ApplicationKt.start ]
     }
     deployment {
-        port = 8080
+        environment = ${?SCOPE}
+        environment = DEV
+
         port = ${?PORT}
-        watch = [ classes, resources ]
+        port = 8080
     }
 }
